[metadata]
name = domainmaster
version = 0.0.2
description = Domain TLD Domain manager
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
platforms = any
author = Benjamin Akhras
url = http://github.com/b3n4kh/domainmaster
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GPL
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.8
install_requires =
    black
    flake8
    build
    certifi
    click
    logger
    asyncio
    aiohttp
    beautifulsoup4

[flake8]
max-line-length = 142
